--- a/projects/angular/src/forms/styles/_toggles.clarity.scss
+++ b/projects/angular/src/forms/styles/_toggles.clarity.scss
@@ -6,7 +6,6 @@
 @use 'sass:meta';
 @use '../../button/variables.toggles' as toggle-variables;
 @use '../../utils/mixins';
-@use 'variables.forms' as forms-variables;
 @use '@cds/core/tokens/tokens.scss';
 
 @mixin clr-toggle-transition-styles() {
@@ -232,7 +231,7 @@
     }
 
     .clr-control-inline .clr-toggle-wrapper .clr-control-label {
-      margin-right: calc(9 * #{forms-variables.$clr-forms-baseline});
+      margin-right: $clr-toggle-icon-margin;
     }
   }
 }
